Bug 918234 - Use a proper StaticRefPtr type in Latency.cpp. r=bsmedberg, r=padenot